fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ a:focus {
 }
 
 .mtb {
-	margin-top: 80px;
+	margin-top: 30px;
 	margin-bottom: 80px;
 }
 
